# qt-gstreamer

./: CMakeLists.txt
cmake/modules/: FindQtGStreamer.cmake  QtHelpers.cmake
elements/gstqtvideosink/: CMakeLists.txt  autotest.cpp  qwidgetvideosinkdelegate.h
examples/: CMakeLists.txt
examples/appsink-src/: CMakeLists.txt
examples/player/: CMakeLists.txt  main.cpp  mediaapp.cpp  mediaapp.h
examples/qmlplayer/: CMakeLists.txt
examples/recorder/: CMakeLists.txt  main.cpp
examples/voip/: CMakeLists.txt  main.cpp
src/QGlib/: CMakeLists.txt  QtGLib-2.0.pc.in  connect.cpp
src/QGst/: CMakeLists.txt  QtGStreamerUi-0.10.pc.in  objectstore.cpp
src/QGst/Ui/: graphicsvideosurface.h  graphicsvideowidget.h  videowidget.cpp  videowidget.h
src/qml/: CMakeLists.txt  plugin.cpp  videoitem.cpp  videoitem.h
tests/manual/: CMakeLists.txt  qwidgetvideosinktest.cpp  videoorientationtest.cpp  videowidgetpipelinetest.cpp  videowidgettest.cpp
